--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
-        "yiisoft/yii2-twig": "*",
-        "netresearch/jsonmapper": "0.*"
+        "yiisoft/yii2-twig": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
