--- a/index.next/composer.json
+++ b/index.next/composer.json
@@ -12,10 +12,12 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-twig": "*",
+        "2amigos/yii2-transliterator-helper": "*",
         "index-next/modules-installer": "*",
         "index-next/site": "*",
         "index-next/backend": "*",
-        "index-next/files": "*"
+        "index-next/files": "*",
+        "index-next/catalog": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
@@ -65,6 +67,10 @@
         {
             "type": "vcs",
             "url":  "http://git.web-dev.ru/index-next/modules-installer.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "http://git.web-dev.ru/index-next/catalog.git"
         }
     ]
 }
