--- a/index.next/composer.json
+++ b/index.next/composer.json
@@ -17,7 +17,8 @@
         "index-next/site": "*",
         "index-next/backend": "*",
         "index-next/files": "*",
-        "index-next/catalog": "*"
+        "index-next/catalog": "*",
+        "index-next/news": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
@@ -71,6 +72,10 @@
         {
             "type": "vcs",
             "url":  "http://git.web-dev.ru/index-next/catalog.git"
+        },
+        {
+            "type": "vcs",
+            "url":  "http://git.web-dev.ru/index-next/news.git"
         }
     ]
 }
