bugfix Разделил конфиги на стандартные и настройки проекта. В проекте настроки нужно исключить из gitignore

--- a/index.next/.gitignore
+++ b/index.next/.gitignore
@@ -1,4 +1,7 @@
-/config/db.php
+/config/app-db.php
+/config/app-console.php
+/config/app-web.php
+/config/app-params.php
 
 # composer vendor dir
 /vendor
