--- a/index.next/composer.json
+++ b/index.next/composer.json
@@ -16,9 +16,7 @@
         "index-next/site": "*",
         "index-next/backend": "*",
         "index-next/files": "*",
-        "index-next/usersmanager": "*",
-        "index-next/news": "*",
-        "index-next/faq": "*"
+        "index-next/usersmanager": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
@@ -72,14 +70,6 @@
         {
             "type": "vcs",
             "url":  "git@git.web-dev.ru:index-next/usersmanager.git"
-        },
-        {
-            "type": "vcs",
-            "url":  "git@git.web-dev.ru:index-next/news.git"
-        },
-        {
-            "type": "vcs",
-            "url":  "git@git.web-dev.ru:index-next/faq.git"
         }
     ]
 }
