--- a/www/.htaccess
+++ b/www/.htaccess
@@ -3,6 +3,7 @@ AddDefaultCharset utf-8
 Options +FollowSymLinks 
 IndexIgnore */* 
 RewriteEngine on
+RewriteRule ^index.php(.*) /$1 [R=301,L]
 RewriteCond %{HTTP_HOST} ^www.(.+)$ [NC]
 RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
