--- a/www/themes/base/settings.json
+++ b/www/themes/base/settings.json
@@ -1,5 +1,7 @@
 {
   "Верхнее меню": {
-    "Цвет": "#FF0000"
+    "Показывать:bool": true,
+    "Закрепить:bool":true,
+    "Цвет:string":true
   }
 }
